# safeguard-core

./: .env.example  .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/dlp/: Cargo.toml
crates/dlp/src/: intl.rs  lib.rs  packs.rs  presidio.rs  rules.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
crates/notify/: Cargo.toml
crates/notify/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  plan.rs
infra/initdb/: 01-extensions.sql
infra/migrations/: 0001_init.sql  0002_seed.sql  0003_shadow_events.sql  0004_shadow_events_outcome.sql  0005_invites.sql  0006_api_key_scope.sql
services/control-plane/: Cargo.toml  Dockerfile
services/control-plane/src/: auth.rs  error.rs  main.rs  state.rs
services/control-plane/src/routes/: conversations.rs  extension.rs  integrations.rs  keys.rs  logs.rs  me.rs  metrics.rs  mod.rs  policies.rs  rag.rs  rule_packs.rs  settings.rs  teams.rs  telemetry.rs  users.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  stream_dlp.rs  upstream.rs
