[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/dlp",
    "crates/embed",
    "crates/notify",
    "services/gateway",
    "services/control-plane",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime + web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
hyper = "1"

# HTTP client (upstream LLM providers)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database + cache
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Internal crates
proto = { path = "crates/proto" }
dlp = { path = "crates/dlp" }
embed = { path = "crates/embed" }
notify = { path = "crates/notify" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
