[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
proto.workspace = true
dlp.workspace = true
embed.workspace = true
notify.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true

jsonwebtoken.workspace = true
argon2.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
