[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
proto.workspace = true
dlp.workspace = true
embed.workspace = true
notify.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true

jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tokio-stream.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
